--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -2,15 +2,20 @@
   margin: 0;
 }
 
-.app{
+.app {
   background-color: #fafafa;
-  
 }
- .app__headerImage{
-   object-fit: contain;
-   background-color: white;
-    padding: 20px;
-    border-bottom: 1px solid lightgray;
- }
 
-        
+.app__header {
+  object-fit: contain;
+  background-color: white;
+  padding: 20px;
+  border-bottom: 1px solid lightgray;
+}
+.app__signup {
+  display: flex !important;
+  flex-direction: column !important;
+}
+.app__headerImage{
+  object-fit: contain;
+}
