Styling posts, header, instagram embed

--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -11,11 +11,21 @@
   background-color: white;
   padding: 20px;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
 }
 .app__signup {
-  display: flex !important;
-  flex-direction: column !important;
+  display: flex;
+  flex-direction: column;
 }
 .app__headerImage{
   object-fit: contain;
+}
+.app__posts{
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.app__postsRight{
+  margin-left: 20px;
 }
