--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -23,5 +23,23 @@
 .post__avatar {
   margin-right: 10px;
 }
-
-
+.post_commentBox {
+  display: flex;
+  margin-top: 10px;
+}
+.post__input{
+  flex: 1;
+  border: none;
+  padding: 10px;
+  border-top: 1px solid lightgray;
+}
+.post__button{
+  flex:0;
+  border: none;
+  border-top: 1px solid lightgray;
+  color: #6082a3;
+  background-color: transparent;
+}
+post_comments{
+  padding: 20px;
+}
