--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -7,6 +7,9 @@
 }
 
 .app__header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   object-fit: contain;
   background-color: white;
   padding: 20px;
