styling the upload image

--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -4,6 +4,9 @@
 
 .app {
   background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .app__header {
