--- a/instagram-clone/src/App.css
+++ b/instagram-clone/src/App.css
@@ -20,18 +20,26 @@
   display: flex;
   justify-content: space-between;
 }
+.app__loginContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.app__loginContainer > h2 {
+  font-size: larger;
+}
 .app__signup {
   display: flex;
   flex-direction: column;
 }
-.app__headerImage{
+.app__headerImage {
   object-fit: contain;
 }
-.app__posts{
+.app__posts {
   padding: 20px;
   display: flex;
   justify-content: center;
 }
-.app__postsRight{
+.app__postsRight {
   margin-left: 20px;
 }
