--- a/instagram-clone/src/Post.css
+++ b/instagram-clone/src/Post.css
@@ -1,45 +1,47 @@
 .post {
-    max-width: 500px;
-    background-color: white;
-    border: 1px solid lightgray;
-    margin-bottom: 45px;
+  max-width: 500px;
+  background-color: white;
+  border: 1px solid lightgray;
+  margin-bottom: 45px;
 }
 .post__header {
   display: flex;
   align-items: center;
   padding: 20px;
 }
-.post_image {
+.post__image {
   width: 100% !important;
   object-fit: contain !important;
   border-bottom: 1px solid lightgray;
   border-top: 1px solid lightgray;
 }
 
-.post_text {
+.post__text {
   font-weight: normal;
+  padding: 20px;
+  padding-bottom: 0px;
+}
+.post__comments {
+  padding-top: 0px;
   padding: 20px;
 }
 .post__avatar {
   margin-right: 10px;
 }
-.post_commentBox {
+.post__commentBox {
   display: flex;
   margin-top: 10px;
 }
-.post__input{
+.post__input {
   flex: 1;
   border: none;
   padding: 10px;
   border-top: 1px solid lightgray;
 }
-.post__button{
-  flex:0;
+.post__button {
+  flex: 0;
   border: none;
   border-top: 1px solid lightgray;
   color: #6082a3;
   background-color: transparent;
-}
-post_comments{
-  padding: 20px;
 }
